--- a/.env.example
+++ b/.env.example
@@ -17,7 +17,8 @@ DB_PORT="3306"
 DB_DATABASE="railway"
 DB_USERNAME="root"
 DB_PASSWORD="TzQyVysVNOEyngOMXFZOeOjsggEMKEnz"
-SESSION_DRIVER="file"
+SESSION_SECURE_COOKIE=true
+SESSION_DRIVER=file
 SESSION_LIFETIME="120"
 SESSION_ENCRYPT="false"
 SESSION_PATH="/"
